# Quicknote

./: io.github.leolost2605.quicknote.json  meson.build
.flatpak-builder/checksums/: x86_64-io.github.leolost2605.quicknote.json
data/: io.github.leolost2605.quicknote.appdata.xml.in  io.github.leolost2605.quicknote.desktop.in  io.github.leolost2605.quicknote.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  note-cell.ui  note-model-item.vala  note-window.vala  quicknote.gresource.xml  window.ui  window.vala
src/lib/: note.vala  notebook.vala
src/note-manager/: notebookchooser-cell.ui  window.ui  window.vala
src/note-manager/note-viewer/: note-viewer.ui  note-viewer.vala
src/note-manager/notebook-page/: notebook-page.ui  notebook-page.vala
src/note-widgets/: note-with-toolbar.ui  note-with-toolbar.vala  note.ui  note.vala  parser.vala
src/note-widgets/toolbar/: toolbar.ui  toolbar.vala
src/note-window/: note-window.ui  note-window.vala
src/ui/: note-window.ui  toolbar.ui  window.ui
